Fix x-overflow on IE11

--- a/public/assets/css/ie.styl
+++ b/public/assets/css/ie.styl
@@ -9,6 +9,11 @@ Currently only tested on IE11
    font-feature-settings normal !important
   }
   
+  html {
+   overflow-x hidden /* no idea what's causing the extra width */
+   max-width 100%
+  }
+  
   nav .logo {
     background-image url("/assets/img/logo/ie-icon.png") !important
   }
@@ -24,7 +29,6 @@ Currently only tested on IE11
   }
   
   input[type="text"], input[type="password"], input[type="email"] {
-    padding-top 8px
     padding-bottom 8px
   }
   
